# solfps-xyz-raylib

./: .gitignore  .gitmodules  CMakeLists.txt  HEALTHBAR_FEATURES.md  MOBILE_CONTROLS.md  MOBILE_CONTROLS_UPDATE.md  Makefile  PRIVY_INTEGRATION.md  README.md
idl/: apply_damage.json  end_game.json  game.json  health.json  init_game.json  init_player.json  join_game.json  leave_game.json  movement.json  player.json  playerstats.json  position.json  reload.json  respawn.json  set_ready.json  shoot.json  solfps_xyz_contracts.json  start_game.json  switch_weapon.json  weapon.json
include/: apply_damage.h  common.h  end_game.h  gun.h  init_game.h  init_player.h  join_game.h  leave_game.h  map.h  mobile_controls.h  movement.h  player.h  privy_bridge.h  reload.h  respawn.h  set_ready.h  shoot.h  start_game.h  switch_weapon.h  ui.h
src/: gun.cpp  main.cpp  map.cpp  mobile_controls.cpp  player.cpp  ui.cpp
